create event route + jwt middleware + update event route
